--- a/src/main.html
+++ b/src/main.html
@@ -10,8 +10,8 @@
   <body>
     <footer class="footer">
       <div class="footer-container">
-        <a href="" class="footer-logo"><svg>LOGO</svg> </a>
-        <ul>
+        <a href="" class="footer-logo"><span>YOUR ENERGY</span> </a>
+        <ul class="footer-list-soc">
           <li>
             <a href="https://www.facebook.com/goITclub/">
               <svg width="40" height="40">O</svg>
