--- a/src/main.html
+++ b/src/main.html
@@ -10,47 +10,52 @@
   <body>
     <footer class="footer">
       <div class="footer-container">
-        <a href="" class="footer-logo"><span>YOUR ENERGY</span> </a>
-        <ul class="footer-list-soc">
-          <li>
-            <a href="https://www.facebook.com/goITclub/">
-              <svg width="40" height="40">O</svg>
-            </a>
-          </li>
-          <li>
-            <a href="https://www.instagram.com/goitclub/">
-              <svg width="40" height="40">O</svg>
-            </a>
-          </li>
-          <li>
-            <a href="https://www.youtube.com/c/GoIT">
-              <svg width="40" height="40">O</svg>
-            </a>
-          </li>
-        </ul>
-        <h2 class="footer-title">Transforming your body shape with us</h2>
-        <div class="footer-form-container">
-          <h3 class="footer-text-1">
-            Subscribe and learn about new exercises!
-          </h3>
-          <form id="subscriptionForm" class="footer-form">
-            <label for="email" class="footer-label"></label>
-            <input
-              class="footer-input-form"
-              type="email"
-              id="email"
-              name="email"
-              pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}"
-              required
-              placeholder="Email"
-            />
-            <button type="submit" class="footer-btn">Send</button>
-          </form>
+        <div class="footer-section-1">
+          <div class="footer-conteiner-logo">
+            <a href="" class="footer-logo"><span>YOUR ENERGY</span> </a>
+            <ul class="footer-list-soc">
+              <li>
+                <a href="https://www.facebook.com/goITclub/">
+                  <svg width="40" height="40">O</svg>
+                </a>
+              </li>
+              <li>
+                <a href="https://www.instagram.com/goitclub/">
+                  <svg width="40" height="40">O</svg>
+                </a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/c/GoIT">
+                  <svg width="40" height="40">O</svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer-section-2">
+            <h2 class="footer-title">Transforming your body shape with us</h2>
+            <div class="footer-form-container">
+              <h3 class="footer-text-1">
+                Subscribe and learn about new exercises!
+              </h3>
+              <form id="subscriptionForm" class="footer-form">
+                <label for="email" class="footer-label"></label>
+                <input
+                  class="footer-input-form"
+                  type="email"
+                  id="email"
+                  name="email"
+                  pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}"
+                  required
+                  placeholder="Email"
+                />
+                <button type="submit" class="footer-btn">Send</button>
+              </form>
+            </div>
+          </div>
         </div>
         <div class="text-container-1">
-          <div>
-            <p class="footer-text-2">Your Energy. All rights reserved.</p>
-          </div>
+          <p class="footer-text-2">Your Energy. All rights reserved.</p>
+
           <div class="text-container-2">
             <p class="footer-text-2">
               <a href="" class="footer-link">Privacy Policy </a>
